# MeshShell

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
MeshShell/: CMakeLists.txt
MeshShell/configure_files/: vtk_conf.json
MeshShell/src/: defs.h  main.cxx  mesh_shell.cxx  mesh_shell.h  view_manager_fwd.h  vtkMesh.cxx  vtkMesh.h
MeshShell/view_tools/: view_defs.h  view_templates.hpp  view_templates_impl.hpp  view_wrapper.cxx  view_wrapper.h  vtk_heads.h  vtk_wrapper.cxx  vtk_wrapper.h  vtk_wrapper_impl.hpp
MeshShell/widgets/: mainwindow.cxx  mainwindow.h  mainwindow.ui  meshwidget.cxx  meshwidget.h  meshwidget.ui
cmake/: OpenVolumeMesh.cmake  VTK.cmake  common.cmake  eigen3.cmake  qt.cmake
data/: 2.inp  2.ovm  RGB.txt  paving.inp  paving_cell.csv  result-node.csv  simple_cube.inp  simple_cube.ovm  simple_cube.sat  simple_cube_cell.csv  simple_cube_cell.txt  simple_test.inp  simple_test.ovm
data/bracket/: bracket.csv  bracket.inp
data/conroda/: conroda.inp  conroda.ovm  conroda_cell.csv
data/example23/: example23.inp  example23.ovm  example23_cell.csv
mesh_tools/: CMakeLists.txt  frame_field.cxx  meshDefs.h  mesh_implement.cxx  mesh_implement.h  mesh_wrapper.cxx  mesh_wrapper.h  stress_field.cxx  stress_field.h
mesh_tools/Implementation/: frame_field.cxx  frame_field.h  graphs.h  meshDefs.h  mesh_implement.cxx  mesh_implement.h  stress_field.cxx  stress_field.h
mesh_tools/OpenVolumeMesh/: CHANGELOG  CMakeLists.txt
mesh_tools/OpenVolumeMesh/Attribs/: NormalAttrib.hh  NormalAttribT_impl.hh  StatusAttrib.cc  StatusAttrib.hh
mesh_tools/OpenVolumeMesh/Core/: BaseEntities.hh  BaseProperty.hh  Entities.hh  GeometryKernel.hh  Iterators.hh  OpenVolumeMeshBaseProperty.hh  OpenVolumeMeshHandle.hh  OpenVolumeMeshProperty.hh  PropertyDefines.hh  PropertyPtr.hh  ResourceManager.cc  ResourceManager.hh  ResourceManagerT_impl.hh  Serializers.hh  TopologyKernel.cc  TopologyKernel.hh  TypeName.hh
mesh_tools/OpenVolumeMesh/FileManager/: FileManager.hh  FileManagerT_impl.hh  filemanager.cc
mesh_tools/OpenVolumeMesh/Geometry/: Vector11T.hh  VectorT.hh
mesh_tools/OpenVolumeMesh/Mesh/: HexahedralMeshTopologyKernel.hh  TetrahedralMeshIterators.cc  TetrahedralMeshTopologyKernel.hh
mesh_tools/OpenVolumeMesh/System/: Deprecation.hh
python_scripts/: stress_data_process.py
view_tools/: CMakeLists.txt  view_wrapper.cxx  view_wrapper.h  vtk_heads.h
